--- a/mobile_client/Preordrer/src/main/res/layout/product_bin_fragment.xml
+++ b/mobile_client/Preordrer/src/main/res/layout/product_bin_fragment.xml
@@ -22,6 +22,7 @@
         android:layout_gravity="end">
 
         <Button
+            android:id="@+id/make_order"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/make_order"/>
