--- a/Preordrer/src/main/res/layout/activity_order_confirmation.xml
+++ b/Preordrer/src/main/res/layout/activity_order_confirmation.xml
@@ -5,7 +5,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.preorder.preorder.OrderConfirmationActivity"
+    tools:context="com.preorder.preorder.ui.OrderConfirmationActivity"
     android:orientation="vertical">
 
     <ListView
@@ -13,6 +13,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </ListView>
+
+    <TextView
+        android:id="@+id/order_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
     
 
     <Button
