--- a/Preordrer/src/main/res/layout/fragment_order_data_time.xml
+++ b/Preordrer/src/main/res/layout/fragment_order_data_time.xml
@@ -3,7 +3,7 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
               android:orientation="horizontal"
-             tools:context="com.preorder.preorder.OrderDataTimeFragment">
+             tools:context="com.preorder.preorder.ui.OrderDataTimeFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
