--- a/Preordrer/src/main/res/layout/product_layout.xml
+++ b/Preordrer/src/main/res/layout/product_layout.xml
@@ -3,10 +3,12 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <CheckBox
-        android:id="@+id/productSelectionChecker"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/product_count"
+        android:layout_width="5pt"
+        android:layout_height="wrap_content"
+        android:text="0"/>
+
 
     <TextView
         android:id="@+id/product"
