--- a/Preordrer/src/main/res/layout/activity_goods_selecting.xml
+++ b/Preordrer/src/main/res/layout/activity_goods_selecting.xml
@@ -8,16 +8,27 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
+    android:background="@color/colorAccent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_goods_selecting"
     tools:context="com.preorder.preorder.ui.GoodsSelectingActivity">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:elevation="4dp"
+        app:title="@string/menu">
+
+    </android.support.v7.widget.Toolbar>
 
 
     <android.support.v4.view.ViewPager
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/menuPager"
         android:layout_width="match_parent"
-        android:layout_height="400dp">
+        android:layout_height="match_parent">
 
         <android.support.v4.view.PagerTabStrip
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -30,11 +41,12 @@
 
     </android.support.v4.view.ViewPager>
 
-
+<!--
     <fragment
         android:id="@+id/product_bin"
         android:name="com.preorder.preorder.ui.ProductBinFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+        -->
 
 </LinearLayout>
