--- a/Preordrer/src/main/res/layout/product_layout.xml
+++ b/Preordrer/src/main/res/layout/product_layout.xml
@@ -2,6 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content">
+    
+    <ImageView
+        android:id="@+id/product_image"
+        android:layout_width="30pt"
+        android:layout_height="30pt"/>
 
     <TextView
         android:id="@+id/product_count"
